# 2D_CFD_Solver

./: .gitignore  CMakeLists.txt  README.md
include/bc/: boundary_conditions.hpp
include/flux/: rusanov_flux.hpp
include/mesh/: mesh_compute.hpp  mesh_reader.hpp
include/physics/: euler_physics.hpp
include/solver/: solver.hpp
mesh_generation/msh/: naca0012_farfield150.msh
mesh_generation/script/: naca0012  naca0012.cpp
src/: main.cpp  plot_residuals.py
src/bc/: boundary_conditions.cpp
src/flux/: rusanov_flux.cpp
src/mesh/: mesh_compute.cpp  mesh_reader.cpp
src/physics/: euler_physics.cpp
src/solver/: solver.cpp
